--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <span class="amount">525</span>
                             <span class="period">one-time</span>
                         </div>
-                        <p class="price-note">+ $100/month maintenance</p>
+                        <p class="price-note">+ $100/month subscription</p>
                     </div>
                     <div class="pricing-features">
                         <ul>
@@ -183,7 +183,7 @@
                             <span class="amount">1,825</span>
                             <span class="period">one-time</span>
                         </div>
-                        <p class="price-note">+ $100/month maintenance</p>
+                        <p class="price-note">+ $100/month subscription</p>
                     </div>
                     <div class="pricing-features">
                         <ul>
@@ -208,7 +208,7 @@
                             <span class="amount">3,225</span>
                             <span class="period">one-time</span>
                         </div>
-                        <p class="price-note">+ $100/month maintenance</p>
+                        <p class="price-note">+ $500/month subscription</p>
                     </div>
                     <div class="pricing-features">
                         <ul>
